--- a/TransporterAPI/pom.xml
+++ b/TransporterAPI/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>TransporterAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TransporterAPI</name>
-	<description>Demo project for Spring Boot</description>
+	<description>APIs for Transporter</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
