--- a/TransporterAPI/src/main/resources/application.properties
+++ b/TransporterAPI/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+server.port = 9090 
