--- a/TransporterAPI/src/main/resources/application.properties
+++ b/TransporterAPI/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url=jdbc:postgresql://docker-postgres:5432/postgres?useSSL=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
