--- a/TransporterAPI/src/main/resources/application.properties
+++ b/TransporterAPI/src/main/resources/application.properties
@@ -1,10 +1,25 @@
-spring.datasource.url=jdbc:postgresql://transporter-postgres:5432/postgres?useSSL=false
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://transporter-postgres:5432/postgres?useSSL=false
+##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#server.port = 9090 
 
-spring.jpa.hibernate.ddl-auto=update
+jwt.secret=javainuse
+jwt.get.token.uri=/transporter
+
+server.port=8080
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-server.port = 9090 
+spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
