--- a/TransporterAPI/src/main/resources/application.properties
+++ b/TransporterAPI/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #server.port = 9090 
 
-jwt.secret=javainuse
+jwt.secret=liveasy
 jwt.get.token.uri=/transporter
 
 server.port=8080
